--- a/src/unit5/depot/test/fixtures/line_items.yml
+++ b/src/unit5/depot/test/fixtures/line_items.yml
@@ -1,9 +1,14 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# Read about fixtures at
+# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  product_id: 
-  cart_id: 
+#START_HIGHLIGHT
+  product: ruby
+  cart: one
+#END_HIGHLIGHT
 
 two:
-  product_id: 
-  cart_id: 
+#START_HIGHLIGHT
+  product: ruby
+  cart: one
+#END_HIGHLIGHT
