Finished through chapter 12

--- a/src/unit5/depot/Gemfile
+++ b/src/unit5/depot/Gemfile
@@ -18,8 +18,13 @@ gem 'coffee-rails', '~> 4.0.0'
 # See https://github.com/sstephenson/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
 
+#START:jquery
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
+#START_HIGHLIGHT
+gem 'jquery-ui-rails'
+#END_HIGHLIGHT
+#END:jquery
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
